--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --color-primary: #FF70AB;
+  --color-secondary: #FFDB5C;
+  --color-tertiary: #FFAF61;
+  --color-quaternary: #C3FF93;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,14 +20,12 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: white;
+  font-family: Roboto, sans-serif;
+  height: 100vh;
 }
+
+
 
 @layer utilities {
   .text-balance {
