--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,11 @@
   }
 }
 
+html {
+  @apply scroll-smooth;
+  @apply scroll-pt-14;
+}
+
 body {
   background: white;
   font-family: Roboto, sans-serif;
