--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -9,6 +11,11 @@
   --color-secondary: #FFDB5C;
   --color-tertiary: #FFAF61;
   --color-quaternary: #C3FF93;
+
+  --color-primary-rgb: 255, 112, 171;
+  --color-secondary-rgb: 255, 175, 97;
+  --color-tertiary-rgb: 255, 219, 92;
+  --color-quaternary-rgb: 195, 255, 147;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -28,6 +35,7 @@ body {
   background: white;
   font-family: Roboto, sans-serif;
   height: 100vh;
+  @apply text-gray-800;
 }
 
 
